# biochementity-vocabulary

./: .gitignore  Makefile  README.md  pyproject.toml
after-review/: BioChemEntity_vocabulary_review_sylvie.yaml  biomarkerlist-sheet.csv  group_review_biochementities.py  remaining.yaml
archive/: combined_01KRDN27SNWE7Z77JB12NV85ZG.yaml  combined_01KRGV70TCRNG7EESG1JG3TJ47.yaml  combined_01KT1HV31028E0429XXTQN6XZ4.yaml  combined_01KT1QV57W0B4E3XXR7DBGQCD0.yaml  combined_01KT3Q4BM414D179HX4D85SK60.yaml  combined_01KT3XJSY9EBPZNE9E58WBFWBE.yaml  combined_01KT3ZK5DCYKVYBYMMEG4K3WNE.yaml  combined_01KT680D3WXTPGMJKK3FNK07QV.yaml  combined_01KT6TWFMH2XJ4TBXYK7ZQGHSQ.yaml  combined_01KT7CZYR92YF86M3VSBDSSX28.yaml  combined_01KT8Q5NFGDQBGYH8Q0SYAVPF7.yaml  combined_01KT93XSANYFZTMXQN4YKMEZP5.yaml  combined_01KT95GKHGGJNX3BDGQJX458DT.yaml  combined_01KT98JZBKWZVMZRC9D2G5RCZZ.yaml  combined_01KT9A6P5D16DGVZCRRJQPSH2S.yaml  combined_01KT9ES3JTNHMV9PYY8J0PVJH7.yaml  compound-groups_01KRB09APNGTQBMW2JX192V0HN.yaml
changelog/: _upcoming.yaml
data/: BioChemEntityList_data.yaml  data.yaml  data.yml
docs/: bot-identity-setup.md  nanopub-workflow-plan.md
dropbox/: acrylamides-v5.yaml  alkaloids-v1.yaml  anaesthetics-v2.yaml  anilines_v4.yaml  aprotic-solvents-v2.yaml  biochementities-v2.yaml  carbamates-v2.yaml  careproducts-v2.yaml  combined_01KRDN27SNWE7Z77JB12NV85ZG.yaml  combined_01KRGRBN6M881JG3BA1TR16YFX.yaml  combined_01KRGV70TCRNG7EESG1JG3TJ47.yaml  compound-groups.yaml  dinch-v2.yaml  dioxins-v2.yaml  flame-retardants-v2.yaml  furans-v2.yaml  glycol-ethers-v2.yaml  (+14 more)
(+5433 files in other folders)
