[project]
name = "biochementity-vocabulary"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pubmate",
    "linkml",
]

[tool.uv.sources]
# Temporary: track knowledgepixels/pubmate HEAD until the P-series and the
# yamlconcat --inherit option land in eu-parc/pubmate under a tag, then pin back.
pubmate = { git = "https://github.com/knowledgepixels/pubmate.git", branch = "main" }
